--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/lodash": "^4.14.105",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "lodash": "^4.17.5",
