--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@types/lodash": "^4.14.105",
+    "angular2-moment": "^1.8.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "lodash": "^4.17.5",
