--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.4.1",
     "lodash": "^4.17.5",
     "moment": "^2.22.0",
+    "ngx-clipboard": "^10.0.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
